--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,64 @@
-html,
-body {
-  font: 11pt arial;
+body,
+select {
+  font: 10pt sans;
 }
-
-h1 {
-  font-size: 150%;
-  margin: 5px 0;
-}
-
-h2 {
-  font-size: 100%;
-  margin: 5px 0;
-}
-
-table.view {
-  width: 100%;
-}
-
-table td {
-  vertical-align: top;
-}
-
-table table {
-  background-color: #f5f5f5;
-  border: 1px solid #e5e5e5;
-}
-
-table table td {
-  vertical-align: middle;
-}
-
-input[type="text"],
-pre {
-  border: 1px solid lightgray;
-}
-
-pre {
-  margin: 0;
-  padding: 5px;
-  font-size: 10pt;
-}
-
 #mynetwork {
-  width: 100%;
-  height: 400px;
+  position: relative;
+  width: 800px;
+  height: 600px;
   border: 1px solid lightgray;
+}
+table.legend_table {
+  font-size: 11px;
+  border-width: 1px;
+  border-color: #d3d3d3;
+  border-style: solid;
+}
+table.legend_table,
+td {
+  border-width: 1px;
+  border-color: #d3d3d3;
+  border-style: solid;
+  padding: 2px;
+}
+div.table_content {
+  width: 80px;
+  text-align: center;
+}
+div.table_description {
+  width: 100px;
+}
+
+#operation {
+  font-size: 28px;
+}
+#node-popUp {
+  display: none;
+  position: absolute;
+  top: 350px;
+  left: 170px;
+  z-index: 299;
+  width: 250px;
+  height: 120px;
+  background-color: #f9f9f9;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #5394ed;
+  padding: 10px;
+  text-align: center;
+}
+#edge-popUp {
+  display: none;
+  position: absolute;
+  top: 350px;
+  left: 170px;
+  z-index: 299;
+  width: 250px;
+  height: 90px;
+  background-color: #f9f9f9;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #5394ed;
+  padding: 10px;
+  text-align: center;
 }
